Rename IsHistorySyncEnabledOnAllProfiles

Bug: 793917
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I80bcead4276b5be658588d5b32ab09ebf9e952dc
Reviewed-on: https://chromium-review.googlesource.com/1008406
Reviewed-by: Olivier Robin <olivierrobin@chromium.org>
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Reviewed-by: Robert Kaplow <rkaplow@chromium.org>
Commit-Queue: Steven Holte <holte@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552845}
Former-commit-id: 0221a1b1457faf2d86ad01cac4b0bc6944cfb6c4