components/ukm/observers/sync_disable_observer_unittest.cc
@@ -113,7 +113,7 @@ class SyncDisableObserverTest : public testing::Test {
 
 TEST_F(SyncDisableObserverTest, NoProfiles) {
   TestSyncDisableObserver observer;
-  EXPECT_FALSE(observer.IsHistorySyncEnabledOnAllProfiles());
+  EXPECT_FALSE(observer.SyncStateAllowsUkm());
   EXPECT_FALSE(observer.ResetNotified());
   EXPECT_FALSE(observer.ResetPurged());
 }
@@ -123,7 +123,7 @@ TEST_F(SyncDisableObserverTest, OneEnabled) {
   MockSyncService sync;
   sync.SetStatus(false, true);
   observer.ObserveServiceForSyncDisables(&sync);
-  EXPECT_TRUE(observer.IsHistorySyncEnabledOnAllProfiles());
+  EXPECT_TRUE(observer.SyncStateAllowsUkm());
   EXPECT_TRUE(observer.ResetNotified());
   EXPECT_FALSE(observer.ResetPurged());
 }
@@ -133,7 +133,7 @@ TEST_F(SyncDisableObserverTest, Passphrase) {
   MockSyncService sync;
   sync.SetStatus(true, true);
   observer.ObserveServiceForSyncDisables(&sync);
-  EXPECT_FALSE(observer.IsHistorySyncEnabledOnAllProfiles());
+  EXPECT_FALSE(observer.SyncStateAllowsUkm());
   EXPECT_FALSE(observer.ResetNotified());
   EXPECT_FALSE(observer.ResetPurged());
 }
@@ -143,7 +143,7 @@ TEST_F(SyncDisableObserverTest, HistoryDisabled) {
   MockSyncService sync;
   sync.SetStatus(false, false);
   observer.ObserveServiceForSyncDisables(&sync);
-  EXPECT_FALSE(observer.IsHistorySyncEnabledOnAllProfiles());
+  EXPECT_FALSE(observer.SyncStateAllowsUkm());
   EXPECT_FALSE(observer.ResetNotified());
   EXPECT_FALSE(observer.ResetPurged());
 }
@@ -153,11 +153,11 @@ TEST_F(SyncDisableObserverTest, AuthError) {
   MockSyncService sync;
   sync.SetStatus(false, true);
   observer.ObserveServiceForSyncDisables(&sync);
-  EXPECT_TRUE(observer.IsHistorySyncEnabledOnAllProfiles());
+  EXPECT_TRUE(observer.SyncStateAllowsUkm());
   sync.SetConnectionStatus(syncer::CONNECTION_AUTH_ERROR);
-  EXPECT_FALSE(observer.IsHistorySyncEnabledOnAllProfiles());
+  EXPECT_FALSE(observer.SyncStateAllowsUkm());
   sync.SetConnectionStatus(syncer::CONNECTION_OK);
-  EXPECT_TRUE(observer.IsHistorySyncEnabledOnAllProfiles());
+  EXPECT_TRUE(observer.SyncStateAllowsUkm());
 }
 
 TEST_F(SyncDisableObserverTest, MixedProfiles1) {
@@ -168,7 +168,7 @@ TEST_F(SyncDisableObserverTest, MixedProfiles1) {
   MockSyncService sync2;
   sync2.SetStatus(false, true);
   observer.ObserveServiceForSyncDisables(&sync2);
-  EXPECT_FALSE(observer.IsHistorySyncEnabledOnAllProfiles());
+  EXPECT_FALSE(observer.SyncStateAllowsUkm());
   EXPECT_FALSE(observer.ResetNotified());
   EXPECT_FALSE(observer.ResetPurged());
 }
@@ -182,11 +182,11 @@ TEST_F(SyncDisableObserverTest, MixedProfiles2) {
   MockSyncService sync2;
   sync2.SetStatus(false, false);
   observer.ObserveServiceForSyncDisables(&sync2);
-  EXPECT_FALSE(observer.IsHistorySyncEnabledOnAllProfiles());
+  EXPECT_FALSE(observer.SyncStateAllowsUkm());
   EXPECT_TRUE(observer.ResetNotified());
   EXPECT_FALSE(observer.ResetPurged());
   sync2.Shutdown();
-  EXPECT_TRUE(observer.IsHistorySyncEnabledOnAllProfiles());
+  EXPECT_TRUE(observer.SyncStateAllowsUkm());
   EXPECT_TRUE(observer.ResetNotified());
   EXPECT_FALSE(observer.ResetPurged());
 }
@@ -200,7 +200,7 @@ TEST_F(SyncDisableObserverTest, TwoEnabled) {
   MockSyncService sync2;
   sync2.SetStatus(false, true);
   observer.ObserveServiceForSyncDisables(&sync2);
-  EXPECT_TRUE(observer.IsHistorySyncEnabledOnAllProfiles());
+  EXPECT_TRUE(observer.SyncStateAllowsUkm());
   EXPECT_FALSE(observer.ResetNotified());
   EXPECT_FALSE(observer.ResetPurged());
 }
@@ -209,15 +209,15 @@ TEST_F(SyncDisableObserverTest, OneAddRemove) {
   TestSyncDisableObserver observer;
   MockSyncService sync;
   observer.ObserveServiceForSyncDisables(&sync);
-  EXPECT_FALSE(observer.IsHistorySyncEnabledOnAllProfiles());
+  EXPECT_FALSE(observer.SyncStateAllowsUkm());
   EXPECT_FALSE(observer.ResetNotified());
   EXPECT_FALSE(observer.ResetPurged());
   sync.SetStatus(false, true);
-  EXPECT_TRUE(observer.IsHistorySyncEnabledOnAllProfiles());
+  EXPECT_TRUE(observer.SyncStateAllowsUkm());
   EXPECT_TRUE(observer.ResetNotified());
   EXPECT_FALSE(observer.ResetPurged());
   sync.Shutdown();
-  EXPECT_FALSE(observer.IsHistorySyncEnabledOnAllProfiles());
+  EXPECT_FALSE(observer.SyncStateAllowsUkm());
   EXPECT_TRUE(observer.ResetNotified());
   EXPECT_FALSE(observer.ResetPurged());
 }
@@ -227,15 +227,15 @@ TEST_F(SyncDisableObserverTest, PurgeOnDisable) {
   MockSyncService sync;
   sync.SetStatus(false, true);
   observer.ObserveServiceForSyncDisables(&sync);
-  EXPECT_TRUE(observer.IsHistorySyncEnabledOnAllProfiles());
+  EXPECT_TRUE(observer.SyncStateAllowsUkm());
   EXPECT_TRUE(observer.ResetNotified());
   EXPECT_FALSE(observer.ResetPurged());
   sync.SetStatus(false, false);
-  EXPECT_FALSE(observer.IsHistorySyncEnabledOnAllProfiles());
+  EXPECT_FALSE(observer.SyncStateAllowsUkm());
   EXPECT_TRUE(observer.ResetNotified());
   EXPECT_TRUE(observer.ResetPurged());
   sync.Shutdown();
-  EXPECT_FALSE(observer.IsHistorySyncEnabledOnAllProfiles());
+  EXPECT_FALSE(observer.SyncStateAllowsUkm());
   EXPECT_FALSE(observer.ResetNotified());
   EXPECT_FALSE(observer.ResetPurged());
 }
